--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,10 @@ primary_region = "ams"
 
 [build]
 
+[[statics]]
+  guest_path = "/app/wwwroot"
+  url_prefix = "/"
+  
 [http_service]
   internal_port = 8080
   force_https = true
