--- a/PointingParty.csproj
+++ b/PointingParty.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Blazor-ApexCharts" Version="2.2.0" />
         <PackageReference Include="MassTransit" Version="8.1.0"/>
     </ItemGroup>
 
