--- a/PointingParty/PointingParty.csproj
+++ b/PointingParty/PointingParty.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <ScopedCssEnabled>false</ScopedCssEnabled>
+        <DisableScopedCssBundling>true</DisableScopedCssBundling>
     </PropertyGroup>
 
     <ItemGroup>
