Update tests; add GitHub Action

--- a/PointingParty.Client.Tests/PointingParty.Client.Tests.csproj
+++ b/PointingParty.Client.Tests/PointingParty.Client.Tests.csproj
@@ -10,10 +10,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="bunit" Version="2.0.24-preview" />
+        <PackageReference Include="bunit" Version="2.0.24-preview"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
-        <PackageReference Include="NSubstitute" Version="5.1.0" />
-        <PackageReference Include="xunit" Version="2.8.1" />
+        <PackageReference Include="NSubstitute" Version="5.1.0"/>
+        <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="xunit" Version="2.8.1"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.8.1">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -25,7 +29,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PointingParty.Client\PointingParty.Client.csproj" />
+        <ProjectReference Include="..\PointingParty.Client\PointingParty.Client.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <AdditionalFiles Include="GameUiTests.cs"/>
     </ItemGroup>
 
 </Project>
