--- a/PointingParty/PointingParty.csproj
+++ b/PointingParty/PointingParty.csproj
@@ -10,7 +10,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\PointingParty.Client\PointingParty.Client.csproj"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0-rc.1.24452.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
