Fix some build issues
- Pin build to Tailwind 3
- Fix fingerprinted assets

--- a/PointingParty/PointingParty.csproj
+++ b/PointingParty/PointingParty.csproj
@@ -6,6 +6,8 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <ScopedCssEnabled>false</ScopedCssEnabled>
         <DisableScopedCssBundling>true</DisableScopedCssBundling>
+        <StaticWebAssetFingerprintingEnabled>true</StaticWebAssetFingerprintingEnabled>
+        <StaticWebAssetsFingerprintContent>true</StaticWebAssetsFingerprintContent>
     </PropertyGroup>
 
     <ItemGroup>
