--- a/PointingParty/PointingParty.csproj
+++ b/PointingParty/PointingParty.csproj
@@ -8,11 +8,13 @@
         <DisableScopedCssBundling>true</DisableScopedCssBundling>
         <StaticWebAssetFingerprintingEnabled>true</StaticWebAssetFingerprintingEnabled>
         <StaticWebAssetsFingerprintContent>true</StaticWebAssetsFingerprintContent>
+        <UserSecretsId>a30c0b29-0039-490d-9418-f5dd975f90c3</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Azure.SignalR" Version="1.30.2"/>
         <ProjectReference Include="..\PointingParty.Client\PointingParty.Client.csproj"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0"/>
     </ItemGroup>
 
 </Project>
