--- a/PointingParty/appsettings.json
+++ b/PointingParty/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Azure": {
+    "SignalR": {
+      "ConnectionString": ""
+    }
+  },
   "AllowedHosts": "*"
 }
