--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -33,4 +33,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+      - run: >-
+          flyctl deploy --remote-only
+          --build-arg "SYNCFUSION_LICENSE_KEY=${{ secrets.SYNCFUSION_LICENSE_KEY }}"
